[gd_scene load_steps=55 format=2]

[ext_resource path="res://Assets/gold_icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Bullet/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/MOAFB_player_32x32_animated-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/MOAFB_player_32x32_animated-Sheet-2.png" type="Texture" id=5]
[ext_resource path="res://Assets/MOAFB_player_32x32_animated-Sheet-3.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Player/ProgressBar.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Menu/MenuTheme.tres" type="Theme" id=8]
[ext_resource path="res://Scripts/Menu/moafbFont.tres" type="DynamicFont" id=9]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 6 )
region = Rect2( 224, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 6 )
region = Rect2( 256, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 6 )
region = Rect2( 288, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 160, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 224, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 256, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 288, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "mineGold",
"speed": 10.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "mineStone",
"speed": 10.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 44.5, 10 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 31.0
height = 34.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision/safe_margin = 1.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 16 )
animation = "mineGold"

[node name="downRay" type="RayCast2D" parent="."]
position = Vector2( 0, 10 )
enabled = true
cast_to = Vector2( 0, 80 )

[node name="miner" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 100 )

[node name="shootDelay" type="Timer" parent="."]
wait_time = 0.42

[node name="stompArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="stompArea"]
position = Vector2( 13, 60 )
shape = SubResource( 7 )

[node name="capsuleShape" type="CollisionShape2D" parent="."]
modulate = Color( 0.858824, 0.247059, 0.247059, 1 )
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="Bullet" parent="." instance=ExtResource( 3 )]
visible = false
sleeping = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="UI" type="Node2D" parent="Camera2D"]
visible = false
z_index = 4

[node name="HUD" type="CanvasLayer" parent="Camera2D/UI"]

[node name="Gold_HUD" type="HBoxContainer" parent="Camera2D/UI/HUD"]
anchor_right = 0.296
anchor_bottom = 0.129
margin_right = 0.119995
margin_bottom = 0.119995

[node name="Gold_icon" type="TextureRect" parent="Camera2D/UI/HUD/Gold_HUD"]
margin_right = 93.0
margin_bottom = 93.0
rect_min_size = Vector2( 93, 93 )
texture = ExtResource( 1 )
expand = true

[node name="Gold_inventory" type="Label" parent="Camera2D/UI/HUD/Gold_HUD"]
margin_left = 97.0
margin_top = 26.0
margin_right = 129.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 9 )
text = "0"
valign = 1

[node name="Health_HUD" type="VBoxContainer" parent="Camera2D/UI/HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -47.0
margin_right = 240.0

[node name="HealthLabel" type="Label" parent="Camera2D/UI/HUD/Health_HUD"]
margin_right = 240.0
margin_bottom = 19.0
theme = ExtResource( 8 )
text = "Health: "

[node name="HealthBar" type="ProgressBar" parent="Camera2D/UI/HUD/Health_HUD"]
margin_top = 23.0
margin_right = 240.0
margin_bottom = 42.0
rect_min_size = Vector2( 240, 14 )
theme = ExtResource( 8 )
step = 1.0
value = 40.0
script = ExtResource( 7 )

[node name="MineBlock" type="Timer" parent="."]
wait_time = 1.2

[connection signal="health_change" from="." to="Camera2D/UI/HUD/Health_HUD/HealthBar" method="_on_Player_health_change"]
[connection signal="timeout" from="shootDelay" to="." method="_on_shootDelay_timeout"]
[connection signal="timeout" from="MineBlock" to="." method="_on_MineBlock_timeout"]
